<package format="2">
  <name>hexapod_gui</name>
  <version>0.1.0</version>
  <description>The hexapod_gui package </description>
  <author email="kocichmartin@gmail.com">Martin Kocich</author>
  <maintainer email="kocichmartin@gmail.com">Martin Kocich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>message_generation</depend>
  <depend>rosconsole</depend>
  <depend>roscpp_serialization</depend>
  <depend>rostime</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
</package>
